fix netlify dev configuration

--- a/netlify.toml
+++ b/netlify.toml
@@ -20,7 +20,7 @@
   command = "npm run dev"
   port = 8888
   targetPort = 5173
-  publish = "dist"
+  publish = "client"
   
 [functions]
   node_bundler = "esbuild"
